// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Switch Default Off 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 8px;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c7 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  position: relative;
  background: none;
  padding: 0;
  border: 0;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3[aria-checked='true'] .c6 {
  background-color: #0046FF;
}

.c3[aria-checked='true'] .c4 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c3[disabled] .c6 {
  background-color: #EBEBE8;
}

.c3[disabled] .c4 {
  border: 1px solid #EBEBE8;
}

@media (min-width:360px) {
  .c2 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
      type="secondary"
    >
      <span
        id="switch-notifymebyemail"
      >
        Notify me by email
      </span>
    </span>
  </div>
  <div
    className="c1"
  >
    <button
      aria-checked={false}
      aria-labelledby="switch-notifymebyemail"
      className="c3"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="c4 c5"
      />
      <span
        className="c6 c7"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Switch Disabled 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 8px;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c7 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  position: relative;
  background: none;
  padding: 0;
  border: 0;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3[aria-checked='true'] .c6 {
  background-color: #0046FF;
}

.c3[aria-checked='true'] .c4 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c3[disabled] .c6 {
  background-color: #EBEBE8;
}

.c3[disabled] .c4 {
  border: 1px solid #EBEBE8;
}

@media (min-width:360px) {
  .c2 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
      type="secondary"
    >
      <span
        id="switch-notifymebyemail"
      >
        Notify me by email
      </span>
    </span>
  </div>
  <div
    className="c1"
  >
    <button
      aria-checked={false}
      aria-labelledby="switch-notifymebyemail"
      className="c3"
      disabled={true}
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="c4 c5"
      />
      <span
        className="c6 c7"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Switch Disabled On 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 8px;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c7 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  position: relative;
  background: none;
  padding: 0;
  border: 0;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3[aria-checked='true'] .c6 {
  background-color: #0046FF;
}

.c3[aria-checked='true'] .c4 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c3[disabled] .c6 {
  background-color: #EBEBE8;
}

.c3[disabled] .c4 {
  border: 1px solid #EBEBE8;
}

@media (min-width:360px) {
  .c2 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
      type="secondary"
    >
      <span
        id="switch-notifymebyemail"
      >
        Notify me by email
      </span>
    </span>
  </div>
  <div
    className="c1"
  >
    <button
      aria-checked={true}
      aria-labelledby="switch-notifymebyemail"
      className="c3"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="c4 c5"
      />
      <span
        className="c6 c7"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Switch With onChange callback 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 8px;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c7 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  position: relative;
  background: none;
  padding: 0;
  border: 0;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3[aria-checked='true'] .c6 {
  background-color: #0046FF;
}

.c3[aria-checked='true'] .c4 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c3[disabled] .c6 {
  background-color: #EBEBE8;
}

.c3[disabled] .c4 {
  border: 1px solid #EBEBE8;
}

@media (min-width:360px) {
  .c2 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
      type="secondary"
    >
      <span
        id="switch-notifymebyemail"
      >
        Notify me by email
      </span>
    </span>
  </div>
  <div
    className="c1"
  >
    <button
      aria-checked={false}
      aria-labelledby="switch-notifymebyemail"
      className="c3"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className="c4 c5"
      />
      <span
        className="c6 c7"
      />
    </button>
  </div>
</div>
`;
